# hacktest

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  hello.cpp  main.cpp  test.cpp
examples/data/: AAPL.csv  MSFT.csv  ^IXIC.csv
ht/: CMakeLists.txt  HackTest.cpp  HackTest.hpp
ht/DataHandler/: CsvHistoricalHandler.cpp  CsvHistoricalHandler.hpp  Data.cpp  Data.hpp  DataHandler.cpp  DataHandler.hpp  HistoricalCsvHandler.cpp  HistoricalCsvHandler.hpp  YahooData.cpp  YahooData.hpp  all.hpp
ht/Event/: Event.cpp  Event.h  Event.hpp  FillEvent.cpp  FillEvent.h  FillEvent.hpp  MarketEvent.cpp  MarketEvent.h  MarketEvent.hpp  OrderEvent.cpp  OrderEvent.h  OrderEvent.hpp  SignalEvent.cpp  SignalEvent.h  SignalEvent.hpp  all.h  all.hpp
ht/ExecutionHandler/: ExecutionHandler.cpp  ExecutionHandler.hpp  SimulatedExecutionHandler.cpp  SimulatedExecutionHandler.hpp  all.hpp
ht/Portfolio/: Portfolio.cpp  Portfolio.hpp  SimplePortfolio.cpp  SimplePortfolio.hpp  all.hpp
ht/Strategy/: SimpleStrategy.cpp  SimpleStrategy.hpp  Strategy.cpp  Strategy.hpp  all.hpp
ht/Utilities/: Performance.cpp  Performance.hpp  all.hpp
